Switch to juice
Juice is currently super slow with vagrant and minio

--- a/install_minio/templates/redis.conf.j2
+++ b/install_minio/templates/redis.conf.j2
@@ -10,6 +10,7 @@ dir /var/lib/redis
 
 protected-mode no
 
+appendonly yes
 {%if inventory_hostname != redis_master%}
 replicaof  {{ redis_master }} 6379
 {% endif %}
